update spec: two not three devs

--- a/cahier_des_charges/cahier_des_charges.tex
+++ b/cahier_des_charges/cahier_des_charges.tex
@@ -87,7 +87,7 @@ Gestion de projet :
 \item Maven
 \item Gestionnaire de version Git
 \item Gestion de projet Gantt
-\item \'Equipe de trois développeurs
+\item \'Equipe de deux développeurs
 \end{itemize}
 
 \begin{figure}[!h]
